# AwakenedSpam

./: .gitignore  AwakenedSpam.py  README.md  config.toml  config.toml.default  pyproject.toml  requirements.txt
