[project]
name = "awakenedspam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keyboard>=0.13.5",
    "mouse>=0.7.1",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "regex>=2026.4.4",
    "rich>=14.3.3",
    "toml>=0.10.2",
]
